[gd_scene load_steps=4 format=3 uid="uid://world_map_node2d"]

[ext_resource type="Script" path="res://scripts/ui/world_map_select_node2d.gd" id="1"]
[ext_resource type="Resource" uid="uid://level_01_node_data" path="res://data/levels/level_01_data.tres" id="2"]
[ext_resource type="Resource" uid="uid://level_02_node_data" path="res://data/levels/level_02_data.tres" id="3"]

[node name="WorldMapSelect" type="Node2D"]
script = ExtResource("1")
level_nodes_data = Array[Resource("res://scripts/resources/level_node_data.gd")]([ExtResource("2"), ExtResource("3")])

[node name="MapBackground" type="Sprite2D" parent="."]
centered = false

[node name="PathsLayer" type="Node2D" parent="."]

[node name="LevelNodes" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)
zoom = Vector2(0.8, 0.8)
limit_smoothed = true
position_smoothing_enabled = true

[node name="UILayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = false

[node name="TopBar" type="HBoxContainer" parent="UILayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="BackButton" type="Button" parent="UILayer/TopBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Back"

[node name="ProfileLabel" type="Label" parent="UILayer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Profile: Player"
vertical_alignment = 1

[node name="ProgressLabel" type="Label" parent="UILayer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Progress: 0/10 levels | Stars: 0/30"
horizontal_alignment = 2
vertical_alignment = 1
